# tcremp

./: .gitignore  README.md  eval_dist.Rmd  pyproject.toml
appendix/: .gitignore  aln.fa  embedding_same_file.ipynb  prototype_embeddings_struct.csv  tcremp_suppl_analysis.Rmd  tcremp_suppl_structures.Rmd  v_tcrpmhc_tcremp.tsv
appendix/yf_benchmark/: yf_benchmark.Rmd
appendix/yfv_S1/: tcremp_clusters_summary_10.csv  tcremp_clusters_summary_2.csv  tcremp_clusters_summary_5.csv  tcremp_clusters_summary_6.csv  tcremp_clusters_summary_8.csv
benchmark/: VDJdb_data_TRA_V100.csv  VDJdb_data_TRB_V100.csv  compare_algo.Rmd  compare_methods_f1_retention.csv  compare_methods_results_TRA.csv  compare_methods_results_TRB.csv  giana_data_clustered_TRA_V100.txt  giana_data_clustered_TRB_V100.txt  giana_data_input_TRA_V100.txt  ismart_data_input_TRA_V100.txt  ismart_data_input_TRA_V100_clustered_v3.txt  ismart_data_input_TRB_V100.txt  ismart_data_input_TRB_V100_clustered_v3.txt  suppltbl1.txt  tcremp_clstr_res_TRA.txt  tcremp_clstr_res_TRB.txt
benchmark/yfv_S1/: summary_table_prep.ipynb  (+1 more)
tcremp/: __init__.py  arguments.py  data_proc.py  input_data_validation.py  ml_utils.py  new_tcremp_run.py  tcrEmpNet.py  tcremp_cluster.py  tcremp_cluster_enrich.py  tcremp_cluster_old.py  tcremp_pipeline.py  tcremp_run.py  tcremp_run_pipeline_clustering.py  utils.py
tcremp_legacy/: input_data_validation.py  metrics.py  tcremp_classifier.py  tcremp_cluster_enrich.py  tcremp_cluster_old.py  tcremp_pipeline.py  tcremp_run_pipeline_clustering.py
test/: cli_test.py  flags.csv  python_flags.txt
(+21 files in other folders)
