[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcremp"
version = "0.0.1"
authors = [
  { name="yuliajk", email="yulia.mow@gmail.com" },
  { name="vek239", email="elizaveta.k.vlasova@gmail.com" },
  { name="mikessh", email="mikhail.shugay@gmail.com" },
]
description = "A library prototype-based T-cell receptor (TCR) sequence embedding"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = [ "antigen", "antibody", "t-cell", "receptor", "sequence", "embedding"]
requires-python = ">=3.11"
dependencies = [
        "mir@git+https://github.com/antigenomics/mirpy.git@0.0.5-tcremp-integration",
        "kneed"
]

[project.urls]
Homepage = "https://github.com/antigenomics/tcremp"
Issues = "https://github.com/antigenomics/tcremp/issues"

[project.scripts]
tcremp-run = "tcremp.tcremp_run:main"
tcremp-cluster = "tcremp.tcremp_cluster:main"

[tool.hatch.metadata]
allow-direct-references = true 